<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question1" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <RadioButton
            android:id="@+id/ans1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/answer11" />

        <RadioButton
            android:id="@+id/ans2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/answer12" />

        <RadioButton
            android:id="@+id/ans3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/answer13" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question2" />

        <CheckBox
            android:id="@+id/ans21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer21" />

        <CheckBox
            android:id="@+id/ans22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer22" />

        <CheckBox
            android:id="@+id/ans23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer23" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/purple_500"
            android:text="Reset"
            android:layout_gravity="bottom"/>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/teal_700"
            android:text="Submit"
            android:layout_gravity="bottom"/>
    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>